...
            KanbanBoardButton(
                onClick = onClickDelete,
                colors = ButtonDefaults.buttonColors(
                    containerColor = CustomTheme.colors.red.w50,
                    contentColor = CustomTheme.colors.white,
                ),
                modifier = Modifier.testTag("삭제 버튼"),
            ) {
                Text(
                    text = stringResource(Res.string.button_delete),
                    fontSize = 16.sp,
                    fontWeight = FontWeight.W500,
                )
...
                colors = ButtonDefaults.buttonColors(
                    containerColor = CustomTheme.colors.purple.w100,
                    contentColor = CustomTheme.colors.white,
                    disabledContainerColor = CustomTheme.colors.purple.w400,
                    disabledContentColor = CustomTheme.colors.white,
                ),
                modifier = Modifier.testTag("수정 버튼"),
            ) {
                Text(
                    text = stringResource(Res.string.button_edit),
                    fontSize = 16.sp,
                    fontWeight = FontWeight.W500,
                )
...
