...
    ) {
        Label(
            stringResource(Res.string.label_title),
            true,
        )
        SingleLineTextField(
            modifier = Modifier.fillMaxWidth().testTag("제목 입력폼"),
            value = value,
            onValueChange = onTitleChange,
            isError = validation is ValidationResult.Invalid,
            supportingText = (validation as? ValidationResult.Invalid)?.error?.let { stringResource(it.toMessage()) },
            placeHolder = stringResource(Res.string.title_placeholder),
        )
...
