...
        snackBarEvent = null
    }

    Box {
        val currentDialog = dialogState.currentDialog
        val currentProject = kanbanBoardState.currentProject.getOrElse {
            Text("최소 하나의 프로젝트가 필요합니다!", modifier = Modifier.testTag("빈 프로젝트 에러"))
            return@Box
        }
        if (currentDialog != null) {
            TaskDialog(
                kanbanProjectState = currentProject,
                taskDialogType = currentDialog,
...
